--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=mastercyber
+spring.datasource.password=securedpassword
+
+
+#spring.jpa.databasePlatform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.sql.init.platform=h2
+spring.jpa.sql.init.mode=always
 
